src/styles/layouts/_grid.scss
// =============================================================================
//
//  GRID
//
// =============================================================================

// -----------------------------------------------------------------------------
// IMPORTS
// -----------------------------------------------------------------------------

@use "../tools/mixins";

// -----------------------------------------------------------------------------
// BASE
// -----------------------------------------------------------------------------

$layout-cell-gap: 2em;

// -----------------------------------------------------------------------------
// ROW
// -----------------------------------------------------------------------------

.layout-row {
  display: flex;
  flex-flow: column nowrap; // Stack grids on mobile
  align-items: stretch;
  justify-content: space-between;
  width: 100%;
  gap: $layout-cell-gap;
  
  @include mixins.breakpoint(lg) {
    flex-flow: row wrap;
  }
}

// -----------------------------------------------------------------------------
// CELL
// -----------------------------------------------------------------------------

.layout-cell {
  width: 100%;
  min-width: 0;
  flex: 0 1 auto;
  & :last-child {
    margin-bottom: 0;
  }
  & :only-child {margin: 0;}
}

// -----------------------------------------------------------------------------
// 2 COLUMN
// -----------------------------------------------------------------------------

.layout-row--2 .layout-cell {
  @include mixins.breakpoint(lg) {
    width: calc(50% - $layout-cell-gap);
  }
}

// -----------------------------------------------------------------------------
// 3 COLUMN
// -----------------------------------------------------------------------------

.layout-row--3 .layout-cell {
  @include mixins.breakpoint(lg) {
    width: calc(33.333% - $layout-cell-gap);
  }
}

// -----------------------------------------------------------------------------
// 4 COLUMN
// -----------------------------------------------------------------------------

.layout-row--4 .layout-cell {
  @include mixins.breakpoint(lg) {
    width: calc(25% - $layout-cell-gap);
  }
}

